[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luxerone"
version = "1.0"
authors = [
  { name="Patrick Shinn", email="shinn5112@gmail.com" }, { name="Ian Foster", email="" }
]
description = "Unofficial LuxerOne residential API client for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "TODO"
"Bug Tracker" = "TODO"