[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luxerone"
version = "0.1"
authors = [
  { name="Patrick Shinn", email="shinn5112@gmail.com" }
]
description = "Unofficial LuxerOne residential API client for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shinn5112/luxerone"
"Bug Tracker" = "https://github.com/shinn5112/luxerone/issues"
"Documentation" = "TODO"